--- a/src/pages/EventsPage/EventsPage.module.css
+++ b/src/pages/EventsPage/EventsPage.module.css
@@ -74,7 +74,7 @@
     border-radius: 5px;
     cursor: pointer;
     width: 100%;
-    transition: background 0.3s;
+    transition: background-color 0.3s;
 }
 
 .cardButton:hover {
