--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -9,7 +9,6 @@
     background: linear-gradient(135deg, #4A90E2, #9013FE);
     color: #333;
 }
-
 .header {
     width: 100%;
     display: flex;
@@ -20,7 +19,6 @@
     color: #fff;
     font-weight: bold;
 }
-
 .form {
     display: flex;
     flex-direction: column;
@@ -30,12 +28,10 @@
     border-radius: 10px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
 }
-
 .label {
     font-weight: bold;
     margin-bottom: 5px;
 }
-
 .input {
     margin-bottom: 15px;
     padding: 12px;
@@ -45,12 +41,10 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s;
 }
-
 .input:focus {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     outline: none;
 }
-
 .submitButton {
     padding: 15px 0;
     font-size: 18px;
@@ -59,19 +53,32 @@
     color: #fff;
     border: none;
     border-radius: 5px;
-    transition: background 0.3s;
+    transition: background-color 0.3s;
     width: 120px;
 }
-
 .submitButton:hover {
     background-color: #3b78c8;
 }
-
 a {
     text-decoration: none;
     color: #4A90E2;
 }
-
 a:hover {
     text-decoration: underline;
+}
+
+/* botao login */
+.loginButton {
+    padding: 10px 15px;
+    font-size: 16px;
+    background-color: #4A90E2;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.loginButton:hover {
+    background-color: #3b78c8;
 }
