--- a/src/pages/EventsPage/EventsPage.module.css
+++ b/src/pages/EventsPage/EventsPage.module.css
@@ -2,14 +2,13 @@
   font-family: Arial, sans-serif;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;  
   align-items: center;
   justify-content: center;
   min-height: 100vh; 
   margin: 0;
   background: linear-gradient(135deg, #4a90e2, #9013fe);
   color: #333;
-  padding-top: 80px; /* para dar espaço abaixo do header fixo */
+  padding-top: 80px;
   box-sizing: border-box;
 }
 
@@ -44,67 +43,23 @@
 }
 
 .cardsContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 40px;
-    width: 100%; /* usa toda a largura possível */
-    max-width: 900px; /* controla a largura máxima para 3 cards */
-    flex-wrap: nowrap; /* impede quebra de linha */
-  }
-
-.card {
-  background: #fff;
-  padding: 15px;
-  border-radius: 10px;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-  width: 250px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.card img {
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 40px;
   width: 100%;
-  height: 150px;
-  background-color: #ddd;
-  border-radius: 10px 10px 0 0;
+  max-width: 900px;
+  flex-wrap: nowrap;
 }
 
-.cardButton {
-  padding: 10px 0;
-  margin-top: 10px;
-  background-color: #4a90e2;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  width: 100%;
-  transition: background-color 0.3s;
-}
-
-.cardButton:hover {
-  background-color: #3b78c8;
-}
-
-.cardLink {
-  margin-top: 5px;
-  text-decoration: none;
-  color: #4a90e2;
-}
-
-.cardLink:hover {
-  text-decoration: underline;
-}
 .title {
-    margin-top: 60px;
-    color: #fff;
-    text-align: left;
-    width: 100%;
-    max-width: 900px;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 32px;
-  }
+  margin-top: 60px;
+  color: #fff;
+  text-align: left;
+  width: 100%;
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 32px;
+}
