--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -6,19 +6,10 @@
   justify-content: center;
   height: 100vh;
   margin: 0;
-  background: linear-gradient(135deg, #4a90e2, #9013fe);
+  background:#004A8D;
   color: #333;
 }
-.header {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 15px 20px;
-  position: absolute;
-  top: 0;
-  color: #fff;
-  font-weight: bold;
-}
+
 .form {
   display: flex;
   flex-direction: column;
@@ -46,18 +37,18 @@
   outline: none;
 }
 .submitButton {
-  padding: 15px 0;
+  padding: 10px 0;
   font-size: 18px;
   cursor: pointer;
-  background-color: #4a90e2;
+  background-color: #F7941E;
   color: #fff;
   border: none;
   border-radius: 5px;
   transition: background-color 0.3s;
-  width: 120px;
+ 
 }
 .submitButton:hover {
-  background-color: #3b78c8;
+  background-color: #d27503;
 }
 a {
   text-decoration: none;
