--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -9,7 +9,11 @@
   background:#004A8D;
   color: #333;
 }
-
+h1 {
+  color: #d27503;  
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
 .form {
   display: flex;
   flex-direction: column;
