--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,7 +1,9 @@
 /* HomePage.module.css */
-body{
-  background-color:  #004C94;;
+body {
+  background-color: #004C94;
+  ;
 }
+
 .container {
   max-width: 1200px;
   margin: 2rem auto;
@@ -12,7 +14,8 @@ body{
 }
 
 h1 {
-  color:white; /* Azul Senac */
+  color: white;
+  /* Azul Senac */
   text-align: center;
   margin-bottom: 2rem;
 }
@@ -24,7 +27,7 @@ h1 {
   border-radius: 6px;
   text-align: center;
   font-weight: bold;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .loading {
@@ -91,13 +94,38 @@ h1 {
 
 .price {
   font-weight: bold;
-  color: #F7941D; /* Laranja Senac */
+  color: #F7941D;
+  /* Laranja Senac */
   font-size: 1.1rem;
   text-align: right;
 }
+
 .mainTitle {
-  color:  #F7941D; /* Laranja Senac */
+  color: #F7941D;
+  /* Laranja Senac */
   text-align: center;
   margin-bottom: 2rem;
   font-size: 2rem;
+}
+
+.subscribeButton {
+  background-color: #004C94;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.subscribeButton:hover {
+  background-color: #F7941D;
+  transform: translateY(-2px);
+}
+
+.subscribeButton:disabled {
+  background-color: #6c757d;
+  cursor: not-allowed;
+  opacity: 0.7;
 }
