--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -7,10 +7,10 @@
   height: 100vh;
   margin: 0;
   background:#004A8D;
-  color: #333;
+
 }
 h1 {
-  color: #d27503;  
+  color:black;  
   text-align: center;
   margin-bottom: 1.5rem;
 }
