--- a/src/components/HeaderComponent/HeaderComponent.module.css
+++ b/src/components/HeaderComponent/HeaderComponent.module.css
@@ -1,32 +1,30 @@
 .header {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 15px 20px;
-    position: absolute;
-    top: 0;
-    color: #004A8D;
-    font-weight: bold;
-    background: white; 
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 20px;
+  position: absolute;
+  top: 0;
+  color: #004a8d;
+  font-weight: bold;
+  background: white;
+}
 
-  }
-  
-  .headerButtons {
-    display: flex;
-  }
-  
-  .button {
-    padding: 8px 15px;
-    font-size: 16px;
-    background-color: #F7941E;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-left: 10px;
-  }
-  
-  .button:hover {
-    background-color: #d27503;
-  }
-  
+.headerButtons {
+  display: flex;
+}
+
+.button {
+  padding: 8px 15px;
+  font-size: 16px;
+  background-color: #f7941e;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.button:hover {
+  background-color: #d27503;
+}
