--- a/src/pages/EventsPage/EventsPage.module.css
+++ b/src/pages/EventsPage/EventsPage.module.css
@@ -4,9 +4,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh; 
+  min-height: 100vh;
   margin: 0;
-  background:#004A8D;
+  background: #004a8d;
   color: #333;
   padding-top: 80px;
   box-sizing: border-box;
