--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,7 +1,6 @@
 /* HomePage.module.css */
 body {
-  background-color: #004C94;
-  ;
+  background-color: #004c94;
 }
 
 .container {
@@ -9,7 +8,7 @@ body {
   margin: 2rem auto;
   padding: 0 1.5rem;
   font-family: Arial, sans-serif;
-  background-color: #004C94;
+  background-color: #004c94;
   color: #333;
 }
 
@@ -37,7 +36,7 @@ h1 {
   height: 100vh;
   font-size: 1.5rem;
   font-weight: 500;
-  color: #004C94;
+  color: #004c94;
 }
 
 .grid {
@@ -94,14 +93,14 @@ h1 {
 
 .price {
   font-weight: bold;
-  color: #F7941D;
+  color: #f7941d;
   /* Laranja Senac */
   font-size: 1.1rem;
   text-align: right;
 }
 
 .mainTitle {
-  color: #F7941D;
+  color: #f7941d;
   /* Laranja Senac */
   text-align: center;
   margin-bottom: 2rem;
@@ -109,7 +108,7 @@ h1 {
 }
 
 .subscribeButton {
-  background-color: #004C94;
+  background-color: #004c94;
   color: #fff;
   padding: 0.5rem 1rem;
   border: none;
@@ -120,7 +119,7 @@ h1 {
 }
 
 .subscribeButton:hover {
-  background-color: #F7941D;
+  background-color: #f7941d;
   transform: translateY(-2px);
 }
 
