--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -6,11 +6,10 @@
   justify-content: center;
   height: 100vh;
   margin: 0;
-  background:#004A8D;
-
+  background: #004a8d;
 }
 h1 {
-  color: #F7941E !important;  
+  color: #f7941e !important;
   text-align: center;
   margin-bottom: 1.5rem;
 }
@@ -45,12 +44,11 @@ h1 {
   padding: 10px 0;
   font-size: 18px;
   cursor: pointer;
-  background-color: #F7941E;
+  background-color: #f7941e;
   color: #fff;
   border: none;
   border-radius: 5px;
   transition: background-color 0.3s;
- 
 }
 .submitButton:hover {
   background-color: #d27503;
